loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:1: error: Missing closing brace `}' assumed here
do{
^Poucet1:20: error: 'while' expected but '}' found.
}
^