loopdowhile.Poucet1.scala.code
do{
  var nbBaggles: Int=0;
  for(i <- 1 to 5){
    avance()
  }whie(sortieTrouvee()!=true)

 
  
  
  
  
  
  



avance();